--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head> 
   <meta charset="UTF-8">
-  <title>Home work</title>
+  <title>Home work!</title>
 </head>
 <body> 
   <header>
