--- a/index.html
+++ b/index.html
@@ -86,14 +86,16 @@
 </section>
 </main>
 <footer>
-  <ul>
-  <li><a href="/">
+  <a href="/">
     <img src="WebStudio.png" alt="Логотип компании">
-  </a></li>
+  </a>
+  <address>
+  <ul>
   <li>г. Киев, пр-т Леси Украинки, 26</li> 
   <li><a href="">info@example.com</a></li> 
   <li>+38 099 111 11 11</li>
 </ul>
+</address>
 </footer>
 </body>
 </html>
