--- a/index.html
+++ b/index.html
@@ -89,13 +89,11 @@
   <a href="/">
     <img src="WebStudio.png" alt="Логотип компании">
   </a>
-  <address>
   <ul>
-  <li>г. Киев, пр-т Леси Украинки, 26</li> 
+  <li><address>г. Киев, пр-т Леси Украинки, 26</address></li> 
   <li><a href="">info@example.com</a></li> 
   <li>+38 099 111 11 11</li>
 </ul>
-</address>
 </footer>
 </body>
 </html>
