--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 <body> 
   <header>
     <nav>
-    <a href="/">
-      <img src="WebStudio.png" alt="Логотип компании">
-    </a>
-
+    <a href="/">WebStudio</a>
     <ul>
       <li><a href="">Студия</a></li>
       <li><a href="">Портфолио</a></li>
@@ -19,13 +16,13 @@
     </nav>
     <ul>
       <li><a href="">info@devstudio.com</a></li>
-      <li>+38 096 111 11 11</li>
+      <li><a href="">+38 099 111 11 11</a></li>
     </ul>
   </header>
   <main>
 <section>
 <h1>Эффективные решения <br> для вашего бизнеса</h1>
-<input type="button" value="Заказать услугу">
+<button type="button">Заказать услугу</button>
 </section>
 <section>
   <ul>
@@ -86,13 +83,11 @@
 </section>
 </main>
 <footer>
-  <a href="/">
-    <img src="WebStudio.png" alt="Логотип компании">
-  </a>
+<a href="/">WebStudio</a>
   <ul>
   <li><address>г. Киев, пр-т Леси Украинки, 26</address></li> 
   <li><a href="">info@example.com</a></li> 
-  <li>+38 099 111 11 11</li>
+  <li><a href="">+38 099 111 11 11</a></li>
 </ul>
 </footer>
 </body>
